--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -144,14 +144,26 @@
 	<section id="two" class="wrapper alt style2">
 		<section class="spotlight">
 			<div class="image"><img src="images/expenseplus-outsourced-bookkeeping-for-charities.jpg" alt="" /></div><div class="content">
-				<p style="text-align: center;">Once you choose to go ahead, we will then create a customised weekly bookkeeping process for us. This will clearly define how we will collaborate with your team to ensure that the bookkeeping happens seamlessly in the background for you. Each week, we will check the digitally uploaded receipts, set up payments that you have approved, make adjustments as needed, and reconcile the books.</p>
+				<p style="text-align: center;">Once you choose to go ahead, we will then create a customised weekly bookkeeping process for us. This will clearly define how we will collaborate with your team to ensure that the bookkeeping happens seamlessly in the background for you.</p>
 			</div>
 		</section>
 		<section class="spotlight">
 			<div class="image"><img src="images/expenseplus-charity-claiming-giftaid.jpg" alt="" /></div><div class="content">
-				<p style="text-align: center;">In addition to answering emails and queries, it is typical to schedule a monthly call to review the previous month's figures and address any questions.
-					If you claim Gift Aid on donations, we can prepare your claim for you using ExpensePlus.
-					At the end of the year, we will complete the accruals and depreciation, and help you liaise with your independent examiner to sign off on the accounts.</p>
+				<p style="text-align: center;">Our BookkeepingPlus Package includes the following:</p>
+					<ul>
+						<li>Receipt Management (weekly)</li>
+						<li>Setting up payments to suppliers, payees, and staff (weekly)</li>
+						<li>Bank reconciliation (monthly)</li>
+						<li>Adjustments and checking of accounts (monthly)</li>
+						<li>Monthly call with finance director to provide financial commentary to allow them to report to your trustees (monthly)</li>
+						<li>Answering finance queries (ongoing)</li>
+						<li>Preparing Gift Aid claim submissions</li>
+						<li>Working with your Accountant & Independent Examiner on your end accounts (yearly)</li>
+						<li>Continuous internal auditing of financial practice across the charity to ensure good financial governance is maintained.</li>
+						<li>Advising your director/treasurer on financial best practice as required (ongoing)</li>
+						<li>The provision of training videos for staff and volunteers on how to using ExpensePlus where needed.</li>
+						<li>A 12 month contract with 2 month notice period.</li>
+					</ul>
 			</div>
 		</section>
 	<!-- FAQs & reviews -->		
