--- a/Training-Support.html
+++ b/Training-Support.html
@@ -78,7 +78,7 @@
 					<div class="inner">
 						<header class="major">
 								<p>When it comes to managing charity finances, it can often be challenging to find cost-effective, reliable and available expertise to help maintain your books, especially if you’ve a small team with a growing set of accounts! Over the many years that we've worked in the charity sector, we've found that sometimes people just need an extra set of expert hands to help out. That’s why we’ve developed three cost effective support packages to help you streamline your accounting processes.</p>
-							<p>All three support packages listed below require you to either be using, or be wiling to migrate to the excellent <a href="https://pdmarfleet.co.uk/#ExpensePlus" target="_blank">ExpensePlus</a> fund accounting software. It’s specifically designed for charities and nonprofit organisations and in our opinion, it is the best system you could choose to save time, money, and stress when it comes to charity bookkeeping.</p>
+							<p>All three support packages listed below require you to either be using, or be willing to migrate to the excellent <a href="https://pdmarfleet.co.uk/#ExpensePlus" target="_blank">ExpensePlus</a> fund accounting software. It’s specifically designed for charities and nonprofit organisations and in our opinion, it is the best system you could choose to save time, money, and stress when it comes to charity bookkeeping.</p>
 							<p>Our day rates for the services below are based on income size, to make things as accessible as possible for charities of all shapes and sizes.</p>
 							</div>	
 							</header>		
