--- a/Contact.html
+++ b/Contact.html
@@ -82,22 +82,33 @@
 				<!-- One -->
 				<section id="one" class="wrapper style1 special">
 					<div class="inner">
-						<header class="major">
-							<p class="icon solid fa-envelope"><span class="label"></span></a><a href="mailto: pete@pdmarfleet.co.uk" style="text-decoration: none;">  pete@pdmarfleet.co.uk</a></p>
-							<p class="icon solid fa-phone"><span class="label"></span></a><a href="tel: 07398906234"style="text-decoration: none;">  07398906234</a></p>
-							<a href="https://www.linkedin.com/in/pdmarfleet/" class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/pdmarfleet/"style="text-decoration: none;"> pdmarfleet</a></p>
-							
+						<section class="wrapper style5">
+							<div class="inner">
+								<p style="text-align: center;">Please complete the form below and we'll get back to you as soon as we can. </p>
+									<form name="contact" method="POST" data-netlify="true">
+										<p>
+										<label>Your Name: <input type="text" name="name" /></label>
+										</p>
+										<p>
+										<label>Your Email: <input type="email" name="email" /></label>
+										</p>
+										<p>
+										<label>Message: <textarea name="message"></textarea></label>
+										</p>
+										<p>
+										<button type="submit">Send</button>
+										</p>
+									</form>
+							</div>	
 					</header>
 							
 					</div>
 				</section>
-
 	
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="tel: 07398906234" class="icon solid fa-phone"><span class="label"></span></a></li>
-							<li><a href="mailto: pete@pdmarfleet.co.uk" class="icon solid fa-envelope"><span class="label"></span></a></li>
+							<li><a href="Contact.html" class="icon solid fa-envelope"><span class="label"></span></a></li>
 							<li><a href="https://www.linkedin.com/in/pdmarfleet/" class="icon brands fa-linkedin"><span class="label"></span></a></li>
 							<li><a href="https://www.youtube.com/channel/UCqJYofgfzYFe4UBMwhNAnZg" class="icon brands fa-youtube"><span class="label"></span></a></li>
 						</ul>
