--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -273,15 +273,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="tel: 07398906234" class="icon solid fa-phone"><span class="label"></span></a></li>
-							<li><a href="mailto: pete@pdmarfleet.co.uk" class="icon solid fa-envelope"><span class="label"></span></a></li>
+							<li><a href="Contact.html" class="icon solid fa-envelope"><span class="label"></span></a></li>
 							<li><a href="https://www.linkedin.com/in/pdmarfleet/" class="icon brands fa-linkedin"><span class="label"></span></a></li>
 							<li><a href="https://www.youtube.com/channel/UCqJYofgfzYFe4UBMwhNAnZg" class="icon brands fa-youtube"><span class="label"></span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; PD Marfleet 2023</li><li><a href="Privacy.html">Privacy Policy</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+							<li>&copy; PD Marfleet 2025</li><li><a href="Privacy.html">Privacy Policy</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</footer>
 
 			</div>
 
