--- a/generic.html
+++ b/generic.html
@@ -66,16 +66,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="Contact.html" class="icon solid fa-envelope"><span class="label"></span></a></li>
+							<li><a href="https://www.linkedin.com/in/pdmarfleet/" class="icon brands fa-linkedin"><span class="label"></span></a></li>
+							<li><a href="https://www.youtube.com/channel/UCqJYofgfzYFe4UBMwhNAnZg" class="icon brands fa-youtube"><span class="label"></span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+							<li>&copy; PD Marfleet 2025</li><li><a href="Privacy.html">Privacy Policy</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</footer>
 
 			</div>
 
