--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 		</section>
 		<!-- About Staff -->
 		<section class="spotlight">
-			<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/Esther-Davy-headshot.jpg" alt="" /></div>
+			<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/250729-PDMA-HR-robina-cousins-headshot-5x7.jpg" alt="" /></div>
 				<div class="content">
 					<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
-					<h2>Esther Davy<br /></h2>
-					<p style="text-align: center;">Esther joined the team in the Autumn of 2024. With a background as a qualified maths teacher, she is not only great with numbers and knows her way around ExpensePlus, but also understands the charity sector because she still works in it. Esther is a part-time member of staff, focusing primarily on delivering expert bookkeeping support to our clients. As one of Esther's references told me, “her exemplary character, unwavering honesty, and exceptional professionalism make her ideal for roles involving confidential data and charity finances. Her strong ethical standards ensure that sensitive information is handled with the utmost care, while her financial skills consistently contribute to effective financial operations.” It’s great to have Esther as part of the team here.</p>
+					<h2>Robina Cousins</h2>
+					<p style="text-align: center;">Robina brings over 20 years of experience in bookkeeping and the charity sector. She has a proven track record of supporting organisations with their finances and is especially skilled in using ExpensePlus, where her expertise helps charities get the most out of the software. Known for her diligence, discretion, and attention to detail, Robina combines technical skill with a personal touch. Her background in administration and charity finance makes her a trusted and valuable addition to our teams</p>
 					
 				</div>
 			</section>
