--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				<div class="content">
 					<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
 					<h2>Robina Cousins</h2>
-					<p style="text-align: center;">Robina brings over 20 years of experience in bookkeeping and the charity sector. She has a proven track record of supporting organisations with their finances and is especially skilled in using ExpensePlus, where her expertise helps charities get the most out of the software. Known for her diligence, discretion, and attention to detail, Robina combines technical skill with a personal touch. Her background in administration and charity finance makes her a trusted and valuable addition to our teams</p>
+					<p style="text-align: center;">Robina brings over 20 years of experience in bookkeeping and the charity sector. She has a proven track record of supporting organisations with their finances and is especially skilled in using ExpensePlus, where her expertise helps charities get the most out of the software. Known for her diligence, discretion, and attention to detail, Robina combines technical skill with a personal touch. Her background in administration and charity finance makes her a trusted and valuable addition to our team.</p>
 					
 				</div>
 			</section>
